--- a/BAA.bib
+++ b/BAA.bib
@@ -1,20 +1,70 @@
-@article{AttentionIsAllYouNeed,
-  author       = {Ashish Vaswani and
-                  Noam Shazeer and
-                  Niki Parmar and
-                  Jakob Uszkoreit and
-                  Llion Jones and
-                  Aidan N. Gomez and
-                  Lukasz Kaiser and
-                  Illia Polosukhin},
-  title        = {Attention Is All You Need},
-  journal      = {CoRR},
-  volume       = {abs/1706.03762},
-  year         = {2017},
-  url          = {http://arxiv.org/abs/1706.03762},
-  eprinttype    = {arXiv},
-  eprint       = {1706.03762},
-  timestamp    = {Sat, 23 Jan 2021 01:20:40 +0100},
-  biburl       = {https://dblp.org/rec/journals/corr/VaswaniSPUJGKP17.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+@article{acharyaPublicationPressureScientific2025,
+  title = {Publication Pressure versus Scientific Integrity},
+  author = {Acharya, Geeta Chand},
+  year = {2025-01/2025-03},
+  journal = {Journal of Integrative Medicine and Research},
+  volume = {3},
+  number = {1},
+  pages = {73},
+  issn = {2949-9860},
+  doi = {10.4103/jimr.jimr_83_24},
+  urldate = {2025-05-29},
+  abstract = {The scientific community is aware of the issue of publication pressure. While scientific authors frequently discuss the topic, it is not equally addressed at all levels within the scientific hierarchy.},
+  langid = {american},
+  file = {C:\Users\janni\Zotero\storage\L8EAT9FV\publication_pressure_versus_scientific_integrity.17.html}
+}
+
+@article{blessetal.AnalyzingEvolutionScientific2025,
+  title = {Analyzing the {{Evolution}} of {{Scientific Misconduct}} Based on the {{Language}} of {{Retracted Papers}}},
+  author = {{Bless et al.}},
+  year = {2025},
+  journal = {ACL Workshop}
+}
+
+@article{candal-pedreiraRetractedPapersOriginating2024,
+  title = {Retracted Papers Originating from Paper Mills: A Cross-Sectional Analysis of References and Citations},
+  shorttitle = {Retracted Papers Originating from Paper Mills},
+  author = {{Candal-Pedreira}, Cristina and {Guerra-Tort}, Carla and {Ruano-Ravina}, Alberto and {Freijedo-Farinas}, Fabi{\'a}n and {Rey-Brandariz}, Julia and Ross, Joseph S. and {P{\'e}rez-R{\'i}os}, M{\'o}nica},
+  year = {2024},
+  month = aug,
+  journal = {Journal of Clinical Epidemiology},
+  volume = {172},
+  pages = {111397},
+  issn = {0895-4356},
+  doi = {10.1016/j.jclinepi.2024.111397},
+  urldate = {2025-05-29},
+  abstract = {Objectives The aims of this study are (1) to analyze the references cited by retracted papers originated from paper mills; (2) to analyze the citations received by retracted papers originated from paper mills; and (3) to analyze the potential relationships existing between paper mill papers and their references and their citations. Study Design and Setting This study was a cross-sectional study. All original papers retracted in 2022 identified as having originated from paper mills and had been published at least 12~months before their retraction (hereinafter ``source-retracted papers'') were included. The Retraction Watch database was used to identify the source-retracted papers and Web of Science was used to identify the references contained within them and the citations received by them. We described the characteristics of the papers and journals. Additionally, 2 networks of source-retracted papers mutually interconnected via their citations and references were built: 1 with only retracted references and retracted citations and the other with all references and citations (retracted or unretracted). Results A total of 416 paper mill papers retracted in 2022 (sourced retracted papers) were identified, with a median of 1247 (interquartilic range, 907.8--1673.5) days between publication and retraction. Of all authors identified, 92.3\% were affiliated with Chinese institutions. There were 14,411 references contained in the source-retracted papers and 8479 citations received by them; the median number of references and citations was 35 (29--40) and 16 (9--25), respectively. In total, 473 references and citations had also been retracted for being paper mill papers. Among the 416 sourced-retracted papers, 169 (41.9\%) and 178 (42.8\%) were referenced or were cited by at least another retracted paper, the majority of which also originated from paper mills. The first network analysis, which included source-retracted papers along with their retracted references and citations, found 3 clusters of 53, 48, and 44 retracted papers that were mutually interconnected. The second network analysis, with all references and citations (retracted or unretracted) identified a large cluster of 2530 interconnected papers. Conclusion Retracted papers originating from paper mills frequently reference and are cited by papers that are later retracted for having originated from paper mills, displaying inter-relationships. Detecting these inter-relationships can serve as an indicator for identifying potentially fraudulent publications.},
+  keywords = {Bibliometric analyses,Ethics,Paper mills,Research integrity,Retraction,Scientific misconduct},
+  file = {C:\Users\janni\Zotero\storage\UZNQ8ZS6\S0895435624001525.html}
+}
+
+@article{majovskyArtificialIntelligenceCan2023,
+  title = {Artificial {{Intelligence Can Generate Fraudulent}} but {{Authentic-Looking Scientific Medical Articles}}: {{Pandora}}'s {{Box Has Been Opened}}},
+  shorttitle = {Artificial {{Intelligence Can Generate Fraudulent}} but {{Authentic-Looking Scientific Medical Articles}}},
+  author = {M{\'a}jovsk{\'y}, Martin and {\v C}ern{\'y}, Martin and Kasal, Mat{\v e}j and Komarc, Martin and Netuka, David},
+  year = {2023},
+  month = may,
+  journal = {Journal of Medical Internet Research},
+  volume = {25},
+  pages = {e46924},
+  issn = {1439-4456},
+  doi = {10.2196/46924},
+  urldate = {2025-05-29},
+  abstract = {Background Artificial intelligence (AI) has advanced substantially in recent years, transforming many industries and improving the way people live and work. In scientific research, AI can enhance the quality and efficiency of data analysis and publication. However, AI has also opened up the possibility of generating high-quality fraudulent papers that are difficult to detect, raising important questions about the integrity of scientific research and the trustworthiness of published papers. Objective The aim of this study was to investigate the capabilities of current AI language models in generating high-quality fraudulent medical articles. We hypothesized that modern AI models can create highly convincing fraudulent papers that can easily deceive readers and even experienced researchers. Methods This proof-of-concept study used ChatGPT (Chat Generative Pre-trained Transformer) powered by the GPT-3 (Generative Pre-trained Transformer 3) language model to generate a fraudulent scientific article related to neurosurgery. GPT-3 is a large language model developed by OpenAI that uses deep learning algorithms to generate human-like text in response to prompts given by users. The model was trained on a massive corpus of text from the internet and is capable of generating high-quality text in a variety of languages and on various topics. The authors posed questions and prompts to the model and refined them iteratively as the model generated the responses. The goal was to create a completely fabricated article including the abstract, introduction, material and methods, discussion, references, charts, etc. Once the article was generated, it was reviewed for accuracy and coherence by experts in the fields of neurosurgery, psychiatry, and statistics and compared to existing similar articles. Results The study found that the AI language model can create a highly convincing fraudulent article that resembled a genuine scientific paper in terms of word usage, sentence structure, and overall composition. The AI-generated article included standard sections such as introduction, material and methods, results, and discussion, as well a data sheet. It consisted of 1992 words and 17 citations, and the whole process of article creation took approximately 1 hour without any special training of the human user. However, there were some concerns and specific mistakes identified in the generated article, specifically in the references. Conclusions The study demonstrates the potential of current AI language models to generate completely fabricated scientific articles. Although the papers look sophisticated and seemingly flawless, expert readers may identify semantic inaccuracies and errors upon closer inspection. We highlight the need for increased vigilance and better detection methods to combat the potential misuse of AI in scientific research. At the same time, it is important to recognize the potential benefits of using AI language models in genuine scientific writing and research, such as manuscript preparation and language editing.},
+  pmcid = {PMC10267787},
+  pmid = {37256685},
+  file = {C:\Users\janni\Zotero\storage\WK2752DV\Májovský et al. - 2023 - Artificial Intelligence Can Generate Fraudulent but Authentic-Looking Scientific Medical Articles P.pdf}
+}
+
+@misc{oranskyNearing5000Retractions2022,
+  title = {Nearing 5,000 Retractions: {{A}} Review of 2022},
+  shorttitle = {Nearing 5,000 Retractions},
+  author = {Oransky, Ivan},
+  year = {2022},
+  month = dec,
+  journal = {Retraction Watch},
+  urldate = {2025-05-29},
+  abstract = {Retractions of a given year's publications as a percentage of papers published in science and engineering. Retraction data from Retraction Watch Database, overall publication figures via U.S. NSF. {\dots}},
+  langid = {american},
+  file = {C:\Users\janni\Zotero\storage\YEWHJ2K3\nearing-5000-retractions-a-review-of-2022.html}
 }
